thesis and Evaluation updated

--- a/ThesisReport/System.tex
+++ b/ThesisReport/System.tex
@@ -97,7 +97,7 @@ It should be noted that some of these components, such as masked ground truth, a
 are built dynamically during the process depending on the paramaters passed in at each step.
 
 \subsection{Platform, Technology}
-The evaluation system has been implemented on a Unix-based platform using C++ as the high level programming language for implementing 
+The evaluation system has been implemented on a Linux-based platform using C++ as the high level programming language for implementing 
 the core functions of the system, such as the main evaluation function, 
 the masking process and the other key operations, 
 and Tool Command Language (TCL) for all the scripts that wrap around the functions implemented, 
