--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -7,6 +7,7 @@
 \usepackage{subcaption}
 %\usepackage{svg}
 \usepackage{amsmath}
+\usepackage{array}
 \usepackage{mathtools}
 %\usepackage{epstopdf}
 %\numberwithin{equation}{section}
