thesis and Evaluation chapter updated

--- a/ThesisReport/Introduction.tex
+++ b/ThesisReport/Introduction.tex
@@ -116,7 +116,7 @@ the user and the augmented world.
 Hence, in this research we have focused more on studying and evaluating the results of stereo correspondence algorithms in particular regions. Since the depth of the objects 
 in a scene and their perception by human visual system are more important in the AR application of our interest, we have 
 defined these regions to be depth edges and their surrounding region in the scene \cite{liv05,kru10}.
-Our hypothesis is that edges, which can also be good indicators of object boundaries and occlusion, are one of the important depth cues for the observer 
+Our hypothesis is that edges, which can also represent the object boundaries and occlusion, are one of the important depth cues for the observer 
 to perceive the depth of different objects in the scene \cite{sze11}. 
 Moreover, inspection of the regions within a few pixels of the depth edges in the scene would also address the problem of occlusion and depth discontinuity, which are two of
 the most challenging regions in stereo matching algorithms \cite{sch02}.
