--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -3,6 +3,7 @@
 \usepackage{url}
 \usepackage{thesis}
 \usepackage[dvips]{graphicx}
+\usepackage{float}
 \usepackage{caption}
 \usepackage{subcaption}
 %\usepackage{svg}
