thesis - system chapter and figures updated

--- a/ThesisReport/Background.tex
+++ b/ThesisReport/Background.tex
@@ -78,6 +78,7 @@ Using the rectification model and epipolar geometry described earlier,
 derivation of the geometrical relation through which the depth of a certain point in 3D space 
 can be obtained, will be straightforward. This relation is presented as follows \cite{sze11}:
 \begin{align}
+\label{eq:dispeq}
 X_{L}/Z=x_{l}/f \\
 -X_{r}/Z=-x_{r}/f  \Rightarrow B-X_{L}/Z=-x_{r}/f \\
 \intertext{By adding these two equations:} \Longrightarrow  B/Z=(x_{l}-x_{r})/f\\
