--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -10,6 +10,7 @@
 \usepackage{amsmath}
 \usepackage{array}
 \usepackage{mathtools}
+\usepackage{multirow}
 %\usepackage{epstopdf}
 %\numberwithin{equation}{section}
 \begin{document}
